--- a/infrastructure/frontend/styles.css
+++ b/infrastructure/frontend/styles.css
@@ -1725,6 +1725,7 @@ select.form-control {
   font-weight: 700;
   letter-spacing: 1px;
   margin: 0;
+  color: white;
 }
 
 .close-menu {
